Add DB for id+pwd

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block  %}Flask JWT Auth{% endblock %}</title>
+  <title>{% block title %}Flask JWT Auth{% endblock %}</title>
 </head>
 <body>
   <nav>
