--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock %}
+{% block title %}로그인{% endblock %}
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-  <input type="text" name="username" placeholder="Username" required><br>
-  <input type="password" name="password" placeholder="Password" required><br>
-  <button type="submit">Login</button>
-</form>
+<div class="container">
+    <h2 class="title">로그인</h2>
+    <form method="post" class="form-box">
+        <input type="text" name="username" placeholder="아이디" required><br>
+        <input type="password" name="password" placeholder="비밀번호" required><br>
+        <button type="submit" class="btn">로그인</button>
+    </form>
+    <a href="{{ url_for('signup') }}" class="link-btn">회원가입</a>
+</div>
 {% endblock %}
