--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
-{% block title %}Sign Up{% endblock %}
+{% block title %}회원가입{% endblock %}
 {% block content %}
-<h2>Sign Up</h2>
-<form method="post">
-  <input type="text" name="username" placeholder="Username" required><br>
-  <input type="password" name="password" placeholder="Password" required><br>
-  <button type="submit">Sign Up</button>
-</form>
+<div class="container">
+    <h2 class="title">회원가입</h2>
+    <form method="post" class="form-box">
+        <input type="text" name="username" placeholder="아이디" required><br>
+        <input type="password" name="password" placeholder="비밀번호" required><br>
+        <input type="password" name="confirm_password" placeholder="비밀번호 확인" required><br>
+        <input type="text" name="nickname" placeholder="성명" required><br>
+        
+        <!-- 프로필 이미지 업로드 -->
+        <input type="file" name="profile_img" accept="image/*"><br>
+        
+        <button type="submit" class="btn">회원가입</button>
+    </form>
+    <a href="{{ url_for('login') }}" class="link-btn">← 뒤로가기</a>
+</div>
 {% endblock %}
