--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h2 class="title">회원가입</h2>
-    <form method="post" class="form-box">
+    <form method="post" class="form-box" enctype="multipart/form-data">
         <input type="text" name="username" placeholder="아이디" required><br>
         <input type="password" name="password" placeholder="비밀번호" required><br>
         <input type="password" name="confirm_password" placeholder="비밀번호 확인" required><br>
