--- a/static/style.css
+++ b/static/style.css
@@ -2,16 +2,26 @@ body {
     font-family: "Noto Sans KR", sans-serif;
     background-color: #f8fff8;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
 }
+.sign-up-head {
+    /* border: 2px dotted orange; */
+    padding-bottom: 5%;
+}
+.sign-up-head > a {
 
+    font-size: 11px;
+    margin-right: 70%;
+    margin-top: 0%;
+}
 .container {
     background: white;
     padding: 30px;
-    border: 3px solid #00a000;
+    border: 3px solid #0e900ecf;
     border-radius: 12px;
     width: 320px;
     text-align: center;
@@ -31,30 +41,49 @@ body {
     font-size: 14px;
 }
 
+.rock-3d-regular {
+    color: rgba(13, 107, 51, 0.792);
+    display: flex;
+    flex-direction: column;
+    font-family: "Rock 3D", system-ui;
+    font-weight: 400;
+    font-size: 80px;
+    font-style: normal;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+
+
+.rock-3d-regular > div {
+    font-size: 32px;
+    margin: 10px;
+}
+
 .btn {
     width: 95%;
     padding: 12px;
     background: black;
     color: white;
     font-weight: bold;
-    border: none;
+    border: 2px solid #0e900ecf;
     border-radius: 6px;
     cursor: pointer;
     margin-top: 10px;
 }
 
 .btn:hover {
-    background: #333;
+    background: red
 }
 
 .link-btn {
     display: inline-block;
     margin-top: 12px;
     padding: 8px 14px;
-    background: #fff;
-    border: 2px solid red;
+    background: #000;
+    border: 2px solid #0e900ecf;
     border-radius: 6px;
-    color: red;
+    color: #fff;
     font-weight: bold;
     text-decoration: none;
 }
