--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block title %}로그인{% endblock %}
 {% block content %}
+<h1 class="rock-3d-regular ">WWL <div  class="rock-3d-regular">(Week We Learned)</div></h1>
 <div class="container">
-    <h2 class="title">로그인</h2>
+    <h2>로그인</h2>
     <form method="post" class="form-box">
         <input type="text" name="username" placeholder="아이디" required><br>
         <input type="password" name="password" placeholder="비밀번호" required><br>
