--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,12 @@
 {% block title %}회원가입{% endblock %}
 {% block content %}
 <div class="container">
-    <h2 class="title">회원가입</h2>
+    
+    <div class = "sign-up-head">
+      <a href="{{ url_for('login') }}" class="link-btn" >← 뒤로가기</a> 
+      <h2 class="title">회원가입</h2>
+    </div>
+    
     <form method="post" class="form-box">
         <input type="text" name="username" placeholder="아이디" required><br>
         <input type="password" name="password" placeholder="비밀번호" required><br>
@@ -12,8 +17,9 @@
         <!-- 프로필 이미지 업로드 -->
         <input type="file" name="profile_img" accept="image/*"><br>
         
-        <button type="submit" class="btn">회원가입</button>
+        <button type="submit" class="btn">등록하기</button>
     </form>
-    <a href="{{ url_for('login') }}" class="link-btn">← 뒤로가기</a>
+
+  
 </div>
 {% endblock %}
