--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_login.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
 <h2>Welcome, {{ user.nickname }}!</h2>
