--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,9 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+
+
 .sign-up-head {
     /* border: 2px dotted orange; */
     padding-bottom: 5%;
@@ -41,13 +44,38 @@ body {
     font-size: 14px;
 }
 
+.form-box > div {
+    display: flex;           /* 가로 배치 */
+    align-items: center;     /* 세로 중앙 정렬 */
+    gap: 10px;               /* 텍스트와 select 간 간격 */
+    color: #7f7676;
+    width: 90%;
+    padding: 10px;
+    margin: 8px 0;
+    border: 2px solid #444;
+    border-radius: 6px;
+    font-size: 14px;
+}
+
+.form-box > div > span {
+    flex-shrink: 0;          /* 텍스트 크기 유지 */
+}
+
+.form-box > div > select {
+    flex-grow: 1;            /* 남은 공간 채우기 */
+    padding: 8px;
+    font-size: 14px;
+    border-radius: 6px;
+    border: 1px solid #444;
+}
+
 .rock-3d-regular {
     color: rgba(13, 107, 51, 0.792);
     display: flex;
     flex-direction: column;
     font-family: "Rock 3D", system-ui;
-    font-weight: 400;
-    font-size: 80px;
+    font-weight: 800;
+    font-size: 90px;
     font-style: normal;
     justify-content: center;
     align-items: center;
@@ -92,3 +120,4 @@ body {
     background: red;
     color: white;
 }
+
