--- a/templates/teamsignup.html
+++ b/templates/teamsignup.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "user_input_base.html" %}
 {% block title %}팀 생성{% endblock %}
 {% block content %}
 <div class="container">
