--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "user_input_base.html" %}
 {% block title %}회원가입{% endblock %}
 {% block content %}
 <div class="container">
