팀 가입 창 추가

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,4 +13,6 @@
     <p>No profile image uploaded.</p>
 {% endif %}
 <a href="{{ url_for('logout') }}">Logout</a>
+<a href="{{ url_for('teamjoin') }}">팁 합류</a>
+<a href="{{ url_for('teamsignup') }}">팀 생성</a>
 {% endblock %}
