--- a/templates/login.html
+++ b/templates/login.html
@@ -10,5 +10,7 @@
         <button type="submit" class="btn">로그인</button>
     </form>
     <a href="{{ url_for('signup') }}" class="link-btn">회원가입</a>
+    <a href="{{ url_for('teamjoin') }}" class="link-btn">팀 가입</a>
+    <a href="{{ url_for('teamsignup') }}" class="link-btn">팀 생성</a>
 </div>
 {% endblock %}
