--- a/static/style.css
+++ b/static/style.css
@@ -35,6 +35,68 @@ body {
     margin-bottom: 20px;
 }
 
+/* test */
+.form-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.form-box select,input {
+    width: 90%;
+    padding: 10px;
+    margin: 8px 0;
+    border: 2px solid #444;
+    border-radius: 6px;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+
+.form-box > div {
+    display: flex;           
+    align-items: first baseline;     
+    gap: 10px;               
+    width: 90%;
+    padding: 10px;
+    margin: 8px 0;
+    border: 2px solid #444;
+    border-radius: 6px;
+    font-size: 14px;
+    box-sizing: border-box;
+    color: #7f7676;
+}
+
+.form-box > div > span {
+    /* flex-shrink: 0; */
+}
+
+.form-box > div > select {
+    flex-grow: 1;
+    padding: 8px;
+    font-size: 14px;
+    border-radius: 6px;
+    border: 1px solid #444;
+}
+
+.btn {
+    width: 90%;
+    padding: 10px;
+    margin-top: 12px;
+    font-size: 16px;
+    border-radius: 6px;
+    border: none;
+    background-color: #444;
+    color: white;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.btn:hover {
+    background-color: #666;
+}
+
+/* test */
 .form-box input {
     width: 90%;
     padding: 10px;
