--- a/templates/teamjoin.html
+++ b/templates/teamjoin.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+{% extends "user_input_base.html" %}
+
 {% block title %}팀 가입{% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="sign-up-head">
-       <a href="{{ url_for('login') }}" class="link-btn" >← 뒤로가기</a> 
+        <a href="{{ url_for('login') }}" class="link-btn">← 뒤로가기</a>
         <h2 class="title">팀 가입</h2>
     </div>
 
