--- a/static/user_input.css
+++ b/static/user_input.css
@@ -52,7 +52,7 @@ body {
     color: #7f7676;
     width: 90%;
     padding: 10px;
-    margin: 8px 0;
+    margin: auto; /* 가운데 정렬을 위해 auto 추가 */
     border: 2px solid #444;
     border-radius: 6px;
     font-size: 14px;
