--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Weekly We Learned</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="/static/mainpage.css">
+    <link rel="stylesheet" href="/static/main_page.css">
 </head>
 <body>
     <div class="wwl-label">WeeklyWeLearned</div>
