profileimg 못 들어오는거 수정

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
       <h2 class="title">회원가입</h2>
     </div>
     
-    <form method="post" class="form-box">
+    <form method="post" class="form-box" enctype="multipart/form-data">
         <input type="text" name="username" placeholder="아이디" required><br>
         <input type="password" name="password" placeholder="비밀번호" required><br>
         <input type="password" name="confirm_password" placeholder="비밀번호 확인" required><br>
@@ -20,6 +20,5 @@
         <button type="submit" class="btn">등록하기</button>
     </form>
 
-  
 </div>
 {% endblock %}
