--- a/templates/team_join.html
+++ b/templates/team_join.html
@@ -1,6 +1,6 @@
 {% extends "user_input_base.html" %}
 
-{% block title %}팀 가입{% endblock %}
+{% block title %}WWL{% endblock %}
 
 {% block content %}
 <div class="container">
