--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "user_input_base.html" %}
-{% block title %}로그인{% endblock %}
+{% block title %}WWL{% endblock %}
 {% block content %}
 <h1 class="rock-3d-regular ">WWL <div  class="rock-3d-regular">(Week We Learned)</div></h1>
 <div class="container">
