--- a/templates/team_signup.html
+++ b/templates/team_signup.html
@@ -1,5 +1,5 @@
 {% extends "user_input_base.html" %}
-{% block title %}팀 생성{% endblock %}
+{% block title %}WWL{% endblock %}
 {% block content %}
 <div class="container">
     
