--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "user_input_base.html" %}
 {% block title %}WWL{% endblock %}
 {% block content %}
-<h1 class="rock-3d-regular ">WWL <div  class="rock-3d-regular">(Week We Learned)</div></h1>
+<h1 class="rock-3d-regular ">WWL <div  class="rock-3d-regular">(Weekly We Learned)</div></h1>
 <div class="container">
     <h2>로그인</h2>
     <form method="post" class="form-box">
