팀페이지 수정

--- a/templates/teampagewrite.html
+++ b/templates/teampagewrite.html
@@ -25,7 +25,7 @@
   <!-- 상단 고정 네비게이션 -->
   <nav class="navbar is-white has-shadow">
     <div class="navbar-brand">
-      <a class="navbar-item wwl-label">WeeklyWeLearned</a>
+      <a class="navbar-item wwl-label" style="color:#00c32e;">WeeklyWeLearned</a>
     </div>
     <div class="navbar-end">
       <div class="navbar-item">
