--- a/templates/team_page.html
+++ b/templates/team_page.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>WWL</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     body { background:#f6fbf9; }
     .wwl-label { 
@@ -74,7 +75,7 @@
           <span class="icon">
             <i class="fas fa-arrow-left"></i>
           </span>
-          <span>⟸ 뒤로가기</span>
+          <span>뒤로가기</span>
         </a>
       </div>
       
